--- a/index.html
+++ b/index.html
@@ -31,6 +31,27 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
   <script>
 
+    // This function loads pokemon data from the Pokemon API
+    function fetchChuckJSON() {
+      // Feel free to download this HTML and edit it, to use another Pokemon ID
+      const pokemonId = 1;
+      const url = `https://api.chucknorris.io/jokes/random`;
+      axios.get(url)
+        .then(response => response.data) // DIFFERENT FROM FETCH: response.data instead of response.json()
+        .then(chuck => {
+          console.log('data decoded from JSON:', chuck);
+
+          // Build a block of HTML
+          const chuckHtml = `
+            <p><strong>${chuck.value}</strong></p>
+            <img src="${chuck.icon_url}" />
+          `;
+          document.querySelector('#chuck-norris').innerHTML = chuckHtml;
+        });
+    }
+
+    fetchChuckJSON();
+
   </script>
 </body>
 
