--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
       <div class="content" id="chuck-norris">
       </div>
+      <button id="button" style="width: auto; height: 30px;"> View other joke</button>
     </div>
 
   </section>
@@ -34,7 +35,6 @@
     // This function loads pokemon data from the Pokemon API
     function fetchChuckJSON() {
       // Feel free to download this HTML and edit it, to use another Pokemon ID
-      const pokemonId = 1;
       const url = `https://api.chucknorris.io/jokes/random`;
       axios.get(url)
         .then(response => response.data) // DIFFERENT FROM FETCH: response.data instead of response.json()
@@ -50,7 +50,11 @@
         });
     }
 
+
     fetchChuckJSON();
+    
+    document.getElementById("button").addEventListener("click",
+    fetchChuckJSON)
 
   </script>
 </body>
